passed LocationOfExpenditure as a prob with other

--- a/src/component/ExpenseItem/ExpenseItem.css
+++ b/src/component/ExpenseItem/ExpenseItem.css
@@ -18,11 +18,11 @@
     font-weight: bold;
 }
 
-.descri{
+/* .descri{
     color:rgba(10,130,140,0.8);
     font-weight: lighter;
     align-self: center;
-}
+} */
 
 
 
