--- a/src/component/ExpenseItem/ExpenseDetails.css
+++ b/src/component/ExpenseItem/ExpenseDetails.css
@@ -1,4 +1,5 @@
 .expense{
+    display: flex;
     border-radius: 8px;
     background-color: rgba(238, 235, 235, 0.9);
     padding: 10px;
@@ -7,10 +8,9 @@
     font-weight: bold;
    overflow: scroll;
    width: 100px;
-   text-align: center;
    height: 56px;
-   display: flex;
-   justify-content: center;
+   
+  
 }
 
 .itemDes{
@@ -21,4 +21,12 @@
     margin-bottom: 5px;
     background-color: rgba(200,200,200,0.5);
     border-radius: 10px;
+}
+.updateButton{
+    background-color: rgba(26, 199, 29, 0.9);
+    width: 110px;
+    /* padding:10px */
+    margin-top: 5px;
+    margin-left: 5px;
+    
 }
