--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .mainContainer{
-    background-color: rgba(210,117,51,0.7);
+    background-color: rgba(200, 92, 14, 0.4);
     width: 90vw;
+    height:auto;
     margin: 10px auto;
     padding: 10px;
     border-radius: 10px;
