--- a/src/component/ExpenseFilter/ExpenseFilter.css
+++ b/src/component/ExpenseFilter/ExpenseFilter.css
@@ -1,7 +1,7 @@
 
 .expenseFilter{
-    color: white;
-    font-size: 30px;
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 25px;
     font-weight: bold;
     text-align: right;
     width: 88%;
