--- a/src/Project.css
+++ b/src/Project.css
@@ -1,8 +1,8 @@
-/* .mainContainer{
+.mainContainer{
     background-color: rgba(200, 92, 14, 0.4);
     width: 90vw;
     height:auto;
     margin: 10px auto;
     padding: 10px;
     border-radius: 10px;
-} */
+}
