--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -18,3 +18,9 @@
   border-color: #ac0e77;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
 }
+
+.button.blur{
+  background: rgba(200,0,0,0.3);
+  border: none;
+  outline: none;
+}
